tests/api/reference/negative/04-defer-layout-change.asm
emit.u8(0x11)

defer {
    emit.u8(0x22)
}
